--- a/com.jagadeesh.app/build.gradle
+++ b/com.jagadeesh.app/build.gradle
@@ -8,7 +8,8 @@ group = 'app.jagadeesh.spring.springHandson'
 version = '0.0.1-SNAPSHOT'
 
 java {
-	sourceCompatibility = '21'
+	sourceCompatibility = JavaVersion.VERSION_17
+
 }
 
 repositories {
